--- a/scraping-tokyo-olympics.ipynb
+++ b/scraping-tokyo-olympics.ipynb
@@ -3,28 +3,30 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# **Gender Equity at the Tokyo Olympics 🏅**"
+    "# **🏅 Gender Equity at the Tokyo Olympics**"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "The International Olympic Committee (IOC) touted the 2020 Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. Although the IOC's statement referred to the overall makeup of participants, **I wondered if the same gender equity had been achieved among competitors for specific events or countries.**"
+    "> In 2021, the International Olympic Committee (IOC) touted the Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. The IOC was referring to the overall makeup of participants, but **I wondered whether or not this statement applied to competitors for specific teams and events.**"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## **Part I. Creating the data set**"
+    "## **Part I. Scraping the data set**"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "> First, I needed data from the Olympics website. Of interest was the [Olympic Medal Count table](https://olympics.com/tokyo-2020/olympic-games/en/results/all-sports/medal-standings.htm), which contained each country's ranking based on how many medals they had earned. Clicking on a country's name in the table led to a page with entries for its team (referred to as National Olympic Committee or NOC), including the participants in each event categorized by male, female, and total athletes."
+    "> To start, I looked for information on the Olympics website. Of interest was the [medal count table](https://olympics.com/tokyo-2020/olympic-games/en/results/all-sports/medal-standings.htm), which contained each National Olympic Committee (NOC's) ranking based on the number of medals they had earned. Clicking on an NOC's name in the table opened a page with its event entries, including the number of male, female, and total athletes in each event.\r\n",
+    ">\r\n",
+    "> In order to scrape this data, I first ran through the medal count table to compile a list of links to the country-specific event pages."
    ],
    "metadata": {}
   },
@@ -32,7 +34,6 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Import libraries to be used\r\n",
     "import requests\r\n",
     "from bs4 import BeautifulSoup\r\n",
     "import pandas as pd"
@@ -93,18 +94,25 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Store the names of all countries in a separate list\r\n",
+    "# Store the names of all countries in a separate list for later use\r\n",
     "country_names = [i.text.strip() for i in links]"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> Next, I looped through the list of links to pull the information that I wanted from the country-specific event pages."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Based on initial inspection, we want to get this information\r\n",
-    "headings = [\"Country\", \"Discipline\", \"Athletes_F\", \"Atheltes_M\", \"Athletes_Total\"]\r\n",
+    "# Based on inspection of the event entries table, we want to get this information\r\n",
+    "headings = [\"Country\", \"Discipline\", \"Athletes_F\", \"Athletes_M\", \"Athletes_Total\"]\r\n",
     "\r\n",
     "# Create a Pandas dataframe with the above headings as columns\r\n",
     "df = pd.DataFrame(columns = headings)"
@@ -178,14 +186,32 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## **Part II. Exploratory analysis**"
+    "## **Part II. Qualifications**"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "> After compiling my data, I used Matplotlib to build charts and visualize the relationship between different columns."
+    "> Before proceeding with this data set, here are two items to note:\r\n",
+    ">\r\n",
+    "> **1** - The medal standing table includes the 93 NOCs that won at least one gold, silver, or bronze medal, but **it excludes the 119 NOCs who did not place in any event**. By gathering data for only countries that medaled, I assumed that the participation rates among their men and women could represent all competing athletes. I made this assumption because non-medaling countries were often on the smaller side with teams of fewer than ten people, so they did not seem as significant for the purposes of this analysis.\r\n",
+    ">\r\n",
+    "> **2** - The **countries in the table could be ranked in two ways**, either by number of gold medals won or number of total medals won. Both rankings were relatively consistent among the top countries, so I arbitrarily chose the former method. However, it would be interesting to see if the latter yields different results."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## **Part III. Exploratory analysis**"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> After compiling my data, I used Matplotlib to build charts and visualize the relationship between various columns."
    ],
    "metadata": {}
   },
@@ -194,7 +220,6 @@
    "execution_count": 1,
    "source": [
     "import pandas as pd\r\n",
-    "import seaborn as sns\r\n",
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
@@ -312,14 +337,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## **Team Size by Country**"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "> I started with a basic bar chart to show the final medal ranking of the countries along with the respective number of athletes on their teams."
+    "> ### **Team Size by Country**\r\n",
+    ">\r\n",
+    "> I started with a basic bar chart to show each country's final medal standing along with their respective team size."
    ],
    "metadata": {}
   },
@@ -327,7 +347,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# Subset the data to rows containing each country's total team size (not separated by discipline)\r\n",
+    "# Subset the data to rows containing each country's total team size (all disciplines combined)\r\n",
     "totals = data[data[\"Discipline\"] == \"Total\"]\r\n",
     "\r\n",
     "totals.head()"
@@ -492,7 +512,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> In the bar chart above, the countries are ordered left to right by their final medal standing. The United States, which placed 1st overall, had the largest combined team of over 600 athletes. China, which placed 2nd, had a team of around 420 athletes. The country had fewer participants than expected for the number of medals that it won, as the trend line forecasted a team size closer to 530 athletes."
+    "> In the bar chart above, the countries are ordered left to right by their medal standing. The United States, which placed 1st overall, had the largest team of over 600 athletes. China, which placed 2nd, had a team of around 420 athletes. Given the trendline, countries such as China, Russia (ROC), and Cuba seemd to have **performed better than expected** compared to other teams of their size. "
    ],
    "metadata": {}
   },
@@ -529,14 +549,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## **Gender Composition by Country**"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "> Next, we can take a closer look at the breakdown of each country's athlete teams by gender."
+    "> ### **Gender Composition by Country**\r\n",
+    ">\r\n",
+    "> Next, I took a closer look at the breakdown of each country's athletes by gender."
    ],
    "metadata": {}
   },
@@ -598,7 +613,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> This dumbell chart shows a difference between the number of male and female athletes on the teams of most countries. Notably, **China had over twice (> 150) as many female competitors than male competitors**. Canada, the Netherlands, and the United States also had female-leaning teams. On the other hand, countries like Germany, Spain, Argentina, and South Africa all had at least 50 more male athletes than female athletes."
+    "> This dumbell chart shows that most countries had **unequal numbers of male and female athletes** on their teams. Notably, China had over twice (> 150) as many female competitors than male competitors. Canada, the Netherlands, and the United States also had female-leaning teams. \r\n",
+    ">\r\n",
+    "> On the other hand, countries like Germany, Spain, Argentina, and South Africa all had at least 50 more male athletes than female athletes."
    ],
    "metadata": {}
   },
@@ -684,7 +701,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> From the above chart, we can see the number of women to each man on a country's team. Again, China had the largest ratio of about 2.3 female athletes to every one male athlete who competed. By contrast, **Saudi Arabia had the lowest ratio** of women to men with the former group taking just 6%, or 2 out of 33, spots on its team."
+    "> From the above chart, we can see the number of women to each man competing on a country's team. Again, China had the highest ratio with about 2.3 female athletes to every one male athlete. By contrast, Saudi Arabia had the lowest ratio of women to men. Female athletes composed just 6% of its team (2 out of 33 spots).\r\n",
+    ">\r\n",
+    "> Additionally, more than **60% of the countries pictured had fewer women than men** on their teams. Switzerland, Fiji, and Bermuda were the only participants with a 1:1 ratio of female to male athletes."
    ],
    "metadata": {}
   },
@@ -713,21 +732,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> The correlation coefficient, r = -0.38, suggests a **weak negative association between the medal standing of a country and its ratio of women to men**. Countries with a higher gender ratio (more women to each man) tended to rank higher while countries with a lower gender ratio (fewer women to each man) tended to rank lower. However, the graph shows many exceptions."
+    "> The correlation coefficient, r = -0.38, suggests a **weak negative association between the medal standing of a country and its ratio of women to men**. Countries with a higher gender ratio (more women to each man) ranked higher while countries with a lower gender ratio (fewer women to each man) ranked lower. However, we can see instances where the opposite is true."
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## **Gender Composition by Discipline**"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "> Finally, let's look at the gender composition of individual events."
+    "> ### **Gender Composition by Discipline**\r\n",
+    ">\r\n",
+    "> Finally, I wanted to visualize the gender composition of individual events (known as disciplines)."
    ],
    "metadata": {}
   },
@@ -809,7 +823,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> To the right, we see that artistic swimming and rythmic gymnastics are the **only all-female events**. Although men have performed in both sports at the national level, the [IOC barrs them](https://www.bbc.com/news/magazine-33566335) from competing at the highest level in the Olympics. A major reason for this decision is the [lack of interest](https://apnews.com/article/2020-tokyo-olympics-gymnastics-entertainment-sports-lifestyle-abeb9ae89ceccd0f95728c07846310e6) and participation among men. In many countries, the sports are still considered too \"feminine\" despite the impressive strength and agility demonstrated by their respective athletes.\r\n",
+    "> To the right, we see that artistic swimming and rythmic gymnastics are the **only all-female events**. Although men have performed in both sports at the national level, the IOC [doesn't provide a way](https://www.bbc.com/news/magazine-33566335) for them to compete at the highest level at the Olympics. Unfortunately, there is [insufficient interest](https://apnews.com/article/2020-tokyo-olympics-gymnastics-entertainment-sports-lifestyle-abeb9ae89ceccd0f95728c07846310e6) and participation among men to justify versions of these events for males. In many countries, the sports are percieved as \"feminine\" despite the impressive strength and agility required from their respective athletes.\r\n",
     ">\r\n",
     "> To the left, we see that the **male road cycling event featured 31% more competitors** than its female counterpart. Historically, cycling has faced [critism](https://www.thestar.com/sports/olympics/opinion/2021/07/21/cycling-is-rolling-slowly-toward-gender-equity-too-slowly-for-its-critics.html) for its lack of progress toward gender equity. In the 1996 Atlanta Games, 58 women competed as compared to 183 men. This large gap remains with just 67 women competing this year as compared to 130 men. The length of the women's race is also shorter than the men's race, stretching 137 kilometers compared to the latter's 234 kilometers. "
    ],
@@ -827,9 +841,9 @@
    "source": [
     "# **Conclusion**\r\n",
     "\r\n",
-    "Women have gained ground at the Games, but gender inequity continues to exist on an event and country level. This difference not only manifests in the data but also in the IOC's  rules, which raise questions about the true status of women athletes in the Olympics. Just this year, the Norwegian women's handball team was [fined](https://www.nbcnews.com/news/sports/norwegian-women-s-beach-handball-team-fined-not-playing-bikinis-n1274453) after choosing to compete in shorts rather than bikini bottoms. That being said, widespread support for their move along with growing scrutiny of the IOC's decisions offers hope for the future.\r\n",
+    "As a whole, women may have gained ground at the Games, but gender inequity is still present on an event and country level. This difference not only manifests in the data but also in the IOC's  rules, which have raised questions about the true status of women athletes at the Olympics. Just this year, the Norwegian women's handball team was [fined](https://www.nbcnews.com/news/sports/norwegian-women-s-beach-handball-team-fined-not-playing-bikinis-n1274453) after choosing to compete in shorts rather than bikini bottoms. That being said, public support for their move along with growing scrutiny of the IOC itself offers hope for the future.\r\n",
     "\r\n",
-    "**What's next?** I plan to revisit this project during subsequent Olympics and to keep tracking its progress toward gender equity.\r\n"
+    "**What's next?** I would like to revisit this project during subsequent Olympics and to compare the progress toward gender equity between the summer and winter Games.\r\n"
    ],
    "metadata": {}
   }
