--- a/scraping-tokyo-olympics.ipynb
+++ b/scraping-tokyo-olympics.ipynb
@@ -10,7 +10,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> In 2021, the International Olympic Committee (IOC) touted the Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. The IOC was referring to the overall makeup of participants, but **I wondered whether or not this statement applied to competitors for specific teams and events.**"
+    "#### In 2021, the International Olympic Committee (IOC) touted the Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. The IOC was referring to the overall makeup of participants, but **I wondered whether or not this statement applied to competitors for specific teams and events.**"
    ],
    "metadata": {}
   },
@@ -337,7 +337,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> ### **Team Size by Country**\r\n",
+    "### **Team Size by Country**\r\n",
     ">\r\n",
     "> I started with a basic bar chart to show each country's final medal standing along with their respective team size."
    ],
@@ -549,7 +549,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> ### **Gender Composition by Country**\r\n",
+    "### **Gender Composition by Country**\r\n",
     ">\r\n",
     "> Next, I took a closer look at the breakdown of each country's athletes by gender."
    ],
@@ -622,13 +622,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## **Ratio of Female to Male Athletes**"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "### **Ratio of female to male athletes**\r\n",
+    ">\r\n",
     "> We can picture this difference another way by plotting the ratio of women to men on each team."
    ],
    "metadata": {}
@@ -739,7 +734,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> ### **Gender Composition by Discipline**\r\n",
+    "### **Gender composition by discipline**\r\n",
     ">\r\n",
     "> Finally, I wanted to visualize the gender composition of individual events (known as disciplines)."
    ],
@@ -841,9 +836,9 @@
    "source": [
     "# **Conclusion**\r\n",
     "\r\n",
-    "As a whole, women may have gained ground at the Games, but gender inequity is still present on an event and country level. This difference not only manifests in the data but also in the IOC's  rules, which have raised questions about the true status of women athletes at the Olympics. Just this year, the Norwegian women's handball team was [fined](https://www.nbcnews.com/news/sports/norwegian-women-s-beach-handball-team-fined-not-playing-bikinis-n1274453) after choosing to compete in shorts rather than bikini bottoms. That being said, public support for their move along with growing scrutiny of the IOC itself offers hope for the future.\r\n",
+    "#### As a whole, women may have gained ground at the Games, but gender inequity is still present on an event and country level. This difference not only manifests in the data but also in the IOC's  rules, which have raised questions about the true status of women athletes at the Olympics. Just this year, the Norwegian women's handball team was [fined](https://www.nbcnews.com/news/sports/norwegian-women-s-beach-handball-team-fined-not-playing-bikinis-n1274453) after choosing to compete in shorts rather than bikini bottoms. That being said, public support for their move along with growing scrutiny of the IOC itself offers hope for the future.\r\n",
     "\r\n",
-    "**What's next?** I would like to revisit this project during subsequent Olympics and to compare the progress toward gender equity between the summer and winter Games.\r\n"
+    "#### **What's next?** I would like to revisit this project during subsequent Olympics and to compare the progress toward gender equity between the summer and winter Games.\r\n"
    ],
    "metadata": {}
   }
