--- a/scraping-tokyo-olympics.ipynb
+++ b/scraping-tokyo-olympics.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# **🏅 Gender Equity at the Tokyo Olympics**"
+    "# **Gender Equity at the Tokyo Olympics**"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "#### In 2021, the International Olympic Committee (IOC) touted the Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. The IOC was referring to the overall makeup of participants, but **I wondered whether or not this statement applied to competitors for specific teams and events.**"
+    "### In 2021, the International Olympic Committee (IOC) touted the Tokyo Games as the \"[first gender-balanced Games in history](https://olympics.com/ioc/news/tokyo-2020-first-ever-gender-balanced-olympic-games-in-history-record-number-of-female-competitors-at-paralympic-games)\" with women composing 49% of all athletes. The IOC was referring to the overall makeup of participants, but **I wondered whether or not this statement applied to competitors for specific teams and events.**"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## **Part I. Scraping the data set**"
+    "## **Scraping the data set**"
    ],
    "metadata": {}
   },
@@ -186,7 +186,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## **Part II. Qualifications**"
+    "## **Notes**"
    ],
    "metadata": {}
   },
@@ -195,16 +195,16 @@
    "source": [
     "> Before proceeding with this data set, here are two items to note:\r\n",
     ">\r\n",
-    "> **1** - The medal standing table includes the 93 NOCs that won at least one gold, silver, or bronze medal, but **it excludes the 119 NOCs who did not place in any event**. By gathering data for only countries that medaled, I assumed that the participation rates among their men and women could represent all competing athletes. I made this assumption because non-medaling countries were often on the smaller side with teams of fewer than ten people, so they did not seem as significant for the purposes of this analysis.\r\n",
+    "> **1** - The medal standing table included the 93 NOCs that won at least one gold, silver, or bronze medal, but **it excluded the 119 NOCs who did not place in any event**. By gathering data for only countries that medaled, I assumed that the participation rates among their men and women could represent all competing athletes. I made this assumption because non-medaling countries often had teams of fewer than ten people, so they did not seem significant for the purpose of this analysis.\r\n",
     ">\r\n",
-    "> **2** - The **countries in the table could be ranked in two ways**, either by number of gold medals won or number of total medals won. Both rankings were relatively consistent among the top countries, so I arbitrarily chose the former method. However, it would be interesting to see if the latter yields different results."
+    "> **2** - The **countries in the table could be ranked in two ways**, either by total gold medals won or by total medals won overall. Both rankings were relatively consistent among the top countries, so I chose the former method for convenience. However, it would be interesting to see if the latter yields different results."
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## **Part III. Exploratory analysis**"
+    "## **Exploratory analysis**"
    ],
    "metadata": {}
   },
@@ -337,8 +337,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### **Team Size by Country**\r\n",
-    ">\r\n",
+    "### **Team size by country**\r\n",
     "> I started with a basic bar chart to show each country's final medal standing along with their respective team size."
    ],
    "metadata": {}
@@ -549,8 +548,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### **Gender Composition by Country**\r\n",
-    ">\r\n",
+    "### **Gender composition by country**\r\n",
     "> Next, I took a closer look at the breakdown of each country's athletes by gender."
    ],
    "metadata": {}
@@ -613,9 +611,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> This dumbell chart shows that most countries had **unequal numbers of male and female athletes** on their teams. Notably, China had over twice (> 150) as many female competitors than male competitors. Canada, the Netherlands, and the United States also had female-leaning teams. \r\n",
-    ">\r\n",
-    "> On the other hand, countries like Germany, Spain, Argentina, and South Africa all had at least 50 more male athletes than female athletes."
+    "> This dumbell chart shows that most countries had **unequal numbers of male and female athletes** on their teams. Notably, China had over twice (> 150) as many female competitors than male competitors. Canada, the Netherlands, and the United States also had female-leaning teams. On the other hand, countries like Germany, Spain, Argentina, and South Africa all had at least 50 more male athletes than female athletes."
    ],
    "metadata": {}
   },
@@ -623,7 +619,6 @@
    "cell_type": "markdown",
    "source": [
     "### **Ratio of female to male athletes**\r\n",
-    ">\r\n",
     "> We can picture this difference another way by plotting the ratio of women to men on each team."
    ],
    "metadata": {}
@@ -735,7 +730,6 @@
    "cell_type": "markdown",
    "source": [
     "### **Gender composition by discipline**\r\n",
-    ">\r\n",
     "> Finally, I wanted to visualize the gender composition of individual events (known as disciplines)."
    ],
    "metadata": {}
@@ -836,9 +830,9 @@
    "source": [
     "# **Conclusion**\r\n",
     "\r\n",
-    "#### As a whole, women may have gained ground at the Games, but gender inequity is still present on an event and country level. This difference not only manifests in the data but also in the IOC's  rules, which have raised questions about the true status of women athletes at the Olympics. Just this year, the Norwegian women's handball team was [fined](https://www.nbcnews.com/news/sports/norwegian-women-s-beach-handball-team-fined-not-playing-bikinis-n1274453) after choosing to compete in shorts rather than bikini bottoms. That being said, public support for their move along with growing scrutiny of the IOC itself offers hope for the future.\r\n",
+    "### As a whole, women may have gained ground at the Games, but gender inequity is still present on an event and country level. This difference not only manifests in the data but also in the IOC's  rules, which have raised questions about the true status of women athletes at the Olympics. Just this year, the Norwegian women's handball team was [fined](https://www.nbcnews.com/news/sports/norwegian-women-s-beach-handball-team-fined-not-playing-bikinis-n1274453) after choosing to compete in shorts rather than bikini bottoms. That being said, public support for their move along with growing scrutiny of the IOC itself offers hope for the future.\r\n",
     "\r\n",
-    "#### **What's next?** I would like to revisit this project during subsequent Olympics and to compare the progress toward gender equity between the summer and winter Games.\r\n"
+    "### **What's next?** I would like to revisit this project during subsequent Olympics and to compare the progress toward gender equity between the summer and winter Games.\r\n"
    ],
    "metadata": {}
   }
