--- a/scraping-tokyo-olympics.ipynb
+++ b/scraping-tokyo-olympics.ipynb
@@ -830,7 +830,7 @@
    "source": [
     "# **Conclusion**\r\n",
     "\r\n",
-    "### As a whole, women may have gained ground at the Games, but gender inequity is still present on an event and country level. This difference not only manifests in the data but also in the IOC's  rules, which have raised questions about the true status of women athletes at the Olympics. Just this year, the Norwegian women's handball team was [fined](https://www.nbcnews.com/news/sports/norwegian-women-s-beach-handball-team-fined-not-playing-bikinis-n1274453) after choosing to compete in shorts rather than bikini bottoms. That being said, public support for their move along with growing scrutiny of the IOC itself offers hope for the future.\r\n",
+    "### As a whole, women have gained ground at the Games, but gender inequity remains on an event and country level. This difference not only manifests in the data but also in the IOC's rules, which have raised questions about the true status of women athletes at the Olympics.\r\n",
     "\r\n",
     "### **What's next?** I would like to revisit this project during subsequent Olympics and to compare the progress toward gender equity between the summer and winter Games.\r\n"
    ],
